Form control for both email and password added to html file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,20 @@
     <title>Wave Form Animation</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1>Please Login</h1>
+        <form>
+            <div class="form-control">
+                <input type="text" required>
+                <label>Email</label>
+            </div>
+
+            <div class="form-control">
+                <input type="password" required>
+                <label>Password</label>
+            </div>
+        </form>
+    </div>
     <script src="/assets/script.js"></script>
 </body>
 </html>
