--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
                 <input type="password" required>
                 <label>Password</label>
             </div>
+
+            <button class="btn">Login</button>
+
+            <p class="text">Don't have an account?
+                <a href="#">Register</a>
+            </p>
         </form>
     </div>
     <script src="/assets/script.js"></script>
