--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
             </p>
         </form>
     </div>
-    <script src="/assets/script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
